@@ -1,3 +1,8 @@
+2007-05-19 Mathieu Blondel <mblondel@users.sourceforge.net>
+
+- Added a debug mode option in the config.
+- Set debug logging level if debug mode set in config.
+
 2007-05-16 Mathieu Blondel <mblondel@users.sourceforge.net>
 
 - Fixed proxy and http auth support.
